# memhub

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
deploy/: bootstrap.sh  com.memhub.memory-push.plist  com.memhub.plist  install.py  memory-sync.sh
docs/: COMPARISON.md  DESIGN.md  KNOWN_ISSUES.md
docs/plans/: 2026-06-21-memhub-capture-pipeline.md  2026-06-21-memhub-cc-integration.md  2026-06-21-memhub-service-core.md  2026-06-22-memhub-management.md
hooks/: memhub-capture.sh  memhub-inject.sh
src/memhub/: capture.py  cli.py  config.py  db.py  embedding.py  fts.py  memsync.py  queue.py  redact.py  search.py  server.py  settings.py  store.py  transcript.py  ui.py  worker.py
tests/: conftest.py  test_capture.py  test_cli.py  test_concurrency.py  test_config.py  test_db.py  test_embedding.py  test_hook_guard.py  test_hooks.sh  test_inject.py  test_install.py  test_manage.py  test_mcp.py  test_memsync.py  test_queue.py  test_redact.py  test_search.py  test_server.py  test_store.py  test_transcript.py  test_worker.py
